# postgres-wasm-fdw

./: .gitignore  Cargo.toml
.github/workflows/: release_wasm_fdw.yml
src/: lib.rs
